tests/baselines/reference/computedPropertyNames26_ES5.errors.txt
computedPropertyNames26_ES5.ts(8,12): error TS2466: 'super' cannot be referenced in a computed property name.


==== computedPropertyNames26_ES5.ts (1 errors) ====
    class Base {
        bar() {
            return 0;
        }
    }
    class C extends Base {
        [
            { [super.bar()]: 1 }[0]
               ~~~~~
!!! error TS2466: 'super' cannot be referenced in a computed property name.
        ]() { }
    }